--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,15 +5,37 @@ html
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no')
+
+    link(rel='stylesheet', href='/css/normalize.css')
+
     link(rel='stylesheet', href='/css/style.min.css')
-    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js')
+    //-script(type="text/javascript").
+      //-function customersController($scope,$http) {
+        //-$http.get("data.js")
+          //-.success(function(response) {$scope.customers = response;});
+      //-}
   body
-    nav.navabar.navbar-default(role='navigation')
-      .container
-        .navbar-header
-          a.navbar-brand(href='#')= title
-    .container
-      block content
-    if settings.env == 'development'
-      script(src='http://localhost:35729/livereload.js')
-    script(src='/js/app.min.js')
+    h1 Shamealytics
+    div.U__text__01
+      img(src='img/logo.png')
+      input 
+    //-nav.navabar.navbar-default(role='navigation')
+      //-.container
+        //-.navbar-header
+          //-a.navbar-brand(href='#')= title
+    //-.container
+
+    //-div(ng-app='', ng-controller='customersController')
+      //-div
+        //-br
+        //-input(type='text', ng-model='name')
+        //-| {{ name }}
+        //-br
+        //-ul
+          //-li(ng-repeat='cust in customers | filter:name | orderBy:\'city\'') {{ cust.Name }} - {{cust.City}}
+
+    script(src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js')
+    script(src="js/main.js")
+
+
+    //-script(src='/js/app.min.js')
